--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -3,12 +3,57 @@
   border-radius: 5px;
   margin: 30px auto;
   width: 80%;
-  height: 140px;
+  height: 88px;
   overflow: hidden;
-  box-shadow: 0px 0px 5px rgba(170, 170, 170, 71%);
+  background: white;
+  filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1));
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  // box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  //   0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+  //   0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  //   0 100px 80px rgba(0, 0, 0, 0.12);
   .title {
     position: absolute;
     left: 10px;
     top: 10px;
+  }
+  &:hover {
+    filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.3));
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  animation: fadeIn 0.3s linear;
+  &.modalFadeOut {
+    animation-name: fadeOut;
   }
 }
