--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
+  background: #eef2f7;
 }
 
 code {
