--- a/src/components/modal/style.scss
+++ b/src/components/modal/style.scss
@@ -44,13 +44,18 @@
   .modalDialog {
     animation-name: sideout;
   }
-}
-
-.modal-content {
-  margin: 1.75rem auto;
-  width: 90%;
-  max-width: 500px;
-  background: #fff;
-  background-clip: padding-box;
-  border: 3px solid rgba(0, 0, 0, 0.2);
+  &__body {
+    margin: 1.75rem auto;
+    width: 90%;
+    max-width: 500px;
+    border-radius: 5px;
+    padding: 5px;
+    background: #fff;
+    background-clip: padding-box;
+    border: 3px solid rgba(0, 0, 0, 0.2);
+    &-header {
+      padding: 5px;
+      height: 30px;
+    }
+  }
 }
